--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
         let diamondsCollected = 0;
         let totalDiamonds = 0;
         let totalDiamondsCollectedAllTime = 0;
-        let currentLevel = 1;
-        let maxLevel = 3; // 3 eingebettete Level verfügbar
+        let currentLevel = 0;  // Startet jetzt mit Level 0
+        let maxLevel = 3; // Level 0-3 verfügbar (4 Level total)
         // Hier werden die geladenen Level gespeichert - Level 1-3 sind bereits eingebettet!
         let customLevels = [
             // LEVEL 1 - Eingebettet (funktioniert IMMER)
@@ -2495,7 +2495,8 @@
         // Setze Menü-Hintergrund (Bild muss im gleichen Verzeichnis liegen)
         const menuScreen = document.getElementById('menuScreen');
         // Lade Hintergrundbild von GitHub Pages
-        menuScreen.style.backgroundImage = `url(${IMG_URL}Menu.png)`;
+        menuScreen.style.backgroundImage = `url(${IMG_URL}menu.png)`;
+        console.log('🖼️ Lade Menu-Hintergrund:', `${IMG_URL}menu.png`);
         
         // ========== MENU & HIGHSCORE SYSTEM ==========
         
