--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 </head>
 <body>
     <!-- Menu Screen -->
-    <div class="menu-screen active" id="menuScreen">
+    <div class="menu-screen active" id="menuScreen" style="background-image: url('https://shrekiii.github.io/Diamond-Digger-Extreme/img/menu.png');">
         <div class="menu-overlay"></div>
         <div class="menu-content">
             <div class="menu-left">
